Commit inicial Model

--- a/src/main/webapp/privado/paciente/listar.xhtml
+++ b/src/main/webapp/privado/paciente/listar.xhtml
@@ -112,7 +112,7 @@
                     <p:panel>
                         <div align="center">
                             <p:commandButton value="Salvar" icon="pi pi-save"
-                                             actionListener="#{controleEstado.salvar()}"
+                                             actionListener="#{controlePaciente.salvar()}"
                                              update="formEdicao formListagem"
                                              oncomplete="if(!args.validationFailed){PF('dlg').hide();}"/>
                         </div>
