--- a/src/main/webapp/privado/paciente/listar.xhtml
+++ b/src/main/webapp/privado/paciente/listar.xhtml
@@ -25,10 +25,9 @@
                         <p:outputLabel value="#{obj.nome}"/>
                     </p:column> 
                     <p:column headerText="Nascimento">
-                        <p:calendar value="#{obj.nascimento}"
-                                    mask="true" pattern="dd/MM/yyyy" navigator="true" size="50">
+                        <p:outputLabel value="#{obj.nascimento}">
                             <f:converter converterId="converterCalendar"/>
-                        </p:calendar> 
+                        </p:outputLabel> 
                     </p:column>
                     <p:column headerText="Telefone">
                         <p:outputLabel value="#{obj.telefone}"/>
