--- a/src/main/webapp/privado/medico/listar.xhtml
+++ b/src/main/webapp/privado/medico/listar.xhtml
@@ -16,8 +16,54 @@
                                  update="formEdicao"
                                  process="@this"
                                  oncomplete="PF('dlg').show();"/>
+                <div align="center">
+                    <p:panelGrid columns="11">
+                        <p:outputLabel value="Ordem: "/>
+                        <p:selectOneMenu value="#{controleMedico.dao.ordemAtual}" id="selectOrdem"
+                                         converter="#{controleMedico.dao.converterOrdem}">
+                            <f:selectItems value="#{controleMedico.dao.listaOrdem}"
+                                           var="ord" itemValue="#{ord.atributo}"/>
+                            <p:ajax update="listagem"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="Filtro: "/>
+                        <p:inputText value="#{controleMedico.dao.filtro}">
+                            <p:ajax update="listagem" event="blur"/>
+                        </p:inputText>
+                        <p:commandButton value="Filtrar" update="listagem"/>
+                        <p:outputLabel value="Máximo de Objetos: "/>
+                        <p:selectOneMenu value="#{controleMedico.dao.maximoObjetos}">
+                            <f:selectItem itemLabel="5" itemValue="5"/>
+                            <f:selectItem itemLabel="10" itemValue="10"/>
+                            <f:selectItem itemLabel="20" itemValue="20"/>
+                            <f:selectItem itemLabel="50" itemValue="50"/>
+                            <f:selectItem itemLabel="100" itemValue="100"/>
+                            <p:ajax update="listagem"/>
+                        </p:selectOneMenu>
+                        <p:commandButton action="#{controleMedico.dao.primeiro()}"
+                                         title="Primeiro"
+                                         icon="pi pi-step-backward"
+                                         update="listagem"/>
+                        <p:commandButton action="#{controleMedico.dao.anterior()}"
+                                         title="Anterior"
+                                         icon="pi pi-chevron-left"
+                                         update="listagem"/>
+                        <p:commandButton action="#{controleMedico.dao.proximo()}"
+                                         title="Proximo"
+                                         icon="pi pi-chevron-right"
+                                         update="listagem"/>
+                        <p:commandButton action="#{controleMedico.dao.ultimo()}"
+                                         title="Ultimo"
+                                         icon="pi pi-step-forward"
+                                         update="listagem"/>
+                    </p:panelGrid>
+                </div>                
                 <p:dataTable value="#{controleMedico.dao.listaObjetos}" var="obj"
                              id="listagem">
+                     <f:facet name="footer">
+                        <div align="center">
+                            <p:outputLabel value="#{controleMedico.dao.mensagemNavegacao}"/>
+                        </div>
+                    </f:facet>  
                     <p:column headerText="CRM">
                         <p:outputLabel value="#{obj.crm}"/>
                     </p:column> 
