--- a/src/main/webapp/privado/medico/listar.xhtml
+++ b/src/main/webapp/privado/medico/listar.xhtml
@@ -109,7 +109,8 @@
                                              title="Excluir"
                                              update="formListagem"
                                              onclick="if (!confirm('Confirma a exclusão?'))
-                                                         return false"/>                                                                         
+                                                         return false"
+                                             rendered="#{p:ifGranted('ADMINISTRADOR')}"/>                                                                         
                         </div>                                                        
                     </p:column>
                 </p:dataTable>                
