--- a/src/main/webapp/privado/consulta/listar.xhtml
+++ b/src/main/webapp/privado/consulta/listar.xhtml
@@ -96,7 +96,8 @@
                                              title="Excluir"
                                              update="formListagem"
                                              onclick="if (!confirm('Confirma a exclusão?'))
-                                                         return false"/>                                                                         
+                                                         return false"
+                                             rendered="#{p:ifGranted('ADMINISTRADOR')}"/>                                                                         
                         </div>                                                        
                     </p:column>
                 </p:dataTable>                
