--- a/src/main/webapp/privado/paciente/listar.xhtml
+++ b/src/main/webapp/privado/paciente/listar.xhtml
@@ -16,6 +16,11 @@
                                  update="formEdicao"
                                  process="@this"
                                  oncomplete="PF('dlg').show();"/>
+                <p:commandButton value="Imprimir"
+                                 action="#{controlePaciente.imprimePacientes()}"
+                                 icon="pi pi-print"
+                                 ajax="false"
+                                 onclick="this.form.target = '_blank';"/>
                 <div align="center">
                     <p:panelGrid columns="11">
                         <p:outputLabel value="Ordem: "/>
@@ -59,7 +64,7 @@
                 </div>                
                 <p:dataTable value="#{controlePaciente.dao.listaObjetos}" var="obj"
                              id="listagem">
-                     <f:facet name="footer">
+                    <f:facet name="footer">
                         <div align="center">
                             <p:outputLabel value="#{controlePaciente.dao.mensagemNavegacao}"/>
                         </div>
@@ -103,7 +108,8 @@
                                              title="Excluir"
                                              update="formListagem"
                                              onclick="if (!confirm('Confirma a exclusão?'))
-                                                         return false"/>                                                                         
+                                                         return false"
+                                             rendered="#{p:ifGranted('ADMINISTRADOR')}"/>                                                                         
                         </div>                                                        
                     </p:column>
                 </p:dataTable>                
